# csv2table

./: .gitignore  README.md  pyproject.toml
csv2table/: _data.py  cli.py  config.py  formatter.py  helpers.py  io.py  validation.py
tests/: test_config.py  test_formatter.py  test_helpers.py  test_io.py
