[project]
name = "csv2table"
version = "0.1.0"
description = "Easily convert your csv files into beautiful tables"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "great-tables>=0.14.0",
    "httpx>=0.27.2",
    "polars>=1.14.0",
    "selenium>=4.26.1",
]

[project.scripts]
csv2table = "csv2table.cli:main"
